interop: replace JNI with JDK 25 FFM bindings (#27)
Squash merge PR #27: replace the production JNI boundary with JDK 25 FFM bindings, complete the Compose/CEF lifecycle contract, shared profile contexts, DevTools/bridge/MV3 integration, and cross-platform CI verification.